fix: типизировать useState и поправить css overflow

--- a/src/components/library-pagination/library-pagination.module.css
+++ b/src/components/library-pagination/library-pagination.module.css
@@ -11,7 +11,7 @@
   column-gap: 12px;
   grid-auto-flow: column;
   list-style: none;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 
   &::-webkit-scrollbar {
